--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
         <View
             android:layout_width="2dp"
             android:layout_height="90dp"
-            android:background="#ff0000" />
+            android:background="#59001AFF" />
 
         <TextView
             android:id="@+id/name"
@@ -58,7 +58,5 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:textSize="16sp"/>
-
     </android.support.v7.widget.CardView>
-
 </android.support.constraint.ConstraintLayout>
